--- a/docs/index.css
+++ b/docs/index.css
@@ -15,98 +15,101 @@ html body {
 }
 
 #nav {
+  width: 100vw;
+  height: 80px;
   position: fixed;
-  width: 100%;
   top: 0;
   left: 0;
-  z-index: 10;
-  /*   background: rgba(255, 255, 255, 0.3); */
+  z-index: 999;
 }
 
-/* 탑 flex */
-#nav .nav-flex {
+/* headerWrap-flex */
+#nav .headerWrap {
+  height: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   position: relative;
 }
-#nav .nav-flex > * {
+#nav .headerWrap > * {
   color: #fff;
 }
-#nav h1 {
-  color: #fff;
-  font-size: 1em;
+
+/* headerWrap : logo */
+#nav .headerWrap .logo {
   margin: auto;
   left: 50%;
   top: 1rem;
   position: absolute;
 }
 
-/* 탑 ham메뉴 */
-#nav .ham {
+/* headerWrap : ham */
+#nav .headerWrap .ham {
   display: none;
   position: absolute;
-  top: 15px;
-  right: 10px;
+  top: 1.5rem;
+  right: 1.5rem;
   width: 50px;
   height: 40px;
   cursor: pointer;
 }
-.ham span {
+#nav .headerWrap .ham .bar {
   display: block;
   background: #fff;
   width: 40px;
   height: 4px;
+  margin-bottom: 8px;
   border-radius: 3px;
   transition: margin 0.25s 0.25s, transform 0.25s;
 }
-.ham .bar1 {
-  margin-bottom: 8px;
-}
-.ham .bar3 {
-  margin-top: 8px;
+#nav .headerWrap .ham .bar:last-child {
+  margin-bottom: 0;
 }
 
-.ham.active span {
+#nav .headerWrap .ham.active .bar {
   transition: margin 0.25s, transform 0.25s 0.25s;
 }
-.ham.active .bar1 {
+#nav .headerWrap .ham.active .bar1 {
   margin-top: 8px;
-  margin-bottom: -4px;
+  margin-bottom: -3.5px;
   transform: rotate(45deg);
 }
-.ham.active .bar2 {
+
+#nav .headerWrap .ham.active .bar2 {
   transform: rotate(45deg);
   display: none;
 }
-.ham.active .bar3 {
+#nav .headerWrap .ham.active .bar3 {
   margin-top: -4px;
   transform: rotate(135deg);
 }
 
-/* 탑 메뉴 */
-#nav .menu {
+/* headerWrap : manu */
+#nav .headerWrap .menu {
   display: flex;
-  gap: 2rem;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
   width: 100%;
-  height: 100%;
 }
-#nav .menu .Work {
-  margin-left: auto;
+#nav .headerWrap .menu li {
+  padding-left: 2rem;
 }
 
-#nav .menu li a {
+#nav .headerWrap .menu .Work {
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 2rem;
+}
+
+#nav .headerWrap .menu li a {
   display: inline-block;
   padding: 1rem 15px;
   text-transform: capitalize;
   font-weight: bold;
-  border: 1px solid red;
 }
-#nav .menu li.active a {
+#nav .headerWrap .menu li.active a {
   color: #0066b3;
 }
 
@@ -115,6 +118,7 @@ html body {
   text-align: center;
   color: #fff;
 }
+
 /* #contents > div h1 {
     height: 100vh;
     line-height: 100vh;
@@ -137,6 +141,7 @@ html body {
       center no-repeat; */
 
   background-size: cover;
+  width:100%;
   height: 100vh;
   /*   line-height: 100vh; */
 }
@@ -163,6 +168,7 @@ html body {
   --fw-regular: 400;
 }
 
+
 /* 1p_center */
 h1 {
   font-size: var(--fs-xl);
@@ -186,6 +192,8 @@ h1 {
 }
 
 .bio_layout {
+/*   font-family: Ogg, sans-serif; */
+      font-family: Lust Pro, sans-serif;
   font-size: calc(6.5rem + 0.390625vw);
   text-align: center;
   width: auto;
@@ -277,12 +285,15 @@ h1 {
   display: flex;
   position: relative;
   width: 100%;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 .wrapper-title {
-  position: absolute;
-  bottom: 1rem;
+  /* position: absolute;
+  bottom: 1rem; */
   font-size: clamp(6vh, 6vh, 6rem);
   line-height: 1.1;
+  font-family: Ogg, sans-serif;
   font-weight: var(--fw-light);
   text-align: left;
 }
@@ -307,97 +318,10 @@ small {
 }
 
 .bio_copyrights {
-  position: absolute;
+  /* position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: 0; */
   font-size: var(--fs-200);
-}
-
-/* ------------라이브러리----------- */
-/* margin */
-.m_auto {
-  margin: auto;
-}
-.m_10 {
-  margin: 10px;
-}
-.m_20 {
-  margin: 20px;
-}
-.m_30 {
-  margin: 30px;
-}
-.m_40 {
-  margin: 40px;
-}
-
-.mx_10 {
-  margin: 0 10px;
-}
-.mx_20 {
-  margin: 0 20px;
-}
-.mx_30 {
-  margin: 0 30px;
-}
-.mx_40 {
-  margin: 0 40px;
-}
-
-.mt_10 {
-  margin-top: 10px;
-}
-.mt_20 {
-  margin-top: 20px;
-}
-.mt_30 {
-  margin-top: 30px;
-}
-.mt_40 {
-  margin-top: 40px;
-}
-
-.mb_10 {
-  margin-bottom: 10px;
-}
-.mb_20 {
-  margin-bottom: 20px;
-}
-.mb_30 {
-  margin-bottom: 30px;
-}
-.mb_40 {
-  margin-bottom: 40px;
-}
-
-/* show */
-.w1440_hide {
-  display: block;
-}
-.w1024_hide {
-  display: block;
-}
-.w768_hide {
-  display: block;
-}
-.w425_hide {
-  display: block;
-}
-.w375_hide {
-  display: block;
-}
-
-.w1024_show {
-  display: none;
-}
-.w768_show {
-  display: none;
-}
-.w680_show {
-  display: none;
-}
-.w425_show {
-  display: none;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -407,28 +331,37 @@ small {
 }
 
 @media only screen and (max-width: 800px) {
-  #nav .nav-flex {
+  #nav {
+    height: auto;
+  }
+  /* headerWrap */
+  #nav .headerWrap {
     flex-flow: column;
     align-items: flex-start;
   }
-  #nav .menu {
-    display: none;
-  }
 
-  /* ham 햄메뉴 */
-  #nav .ham {
+  /* headerWrap : logo */
+  #nav .headerWrap .logo {
+    left: calc(8vw - (100px / 2));
+  }
+  /* headerWrap : ham */
+  #nav .headerWrap .ham {
     display: block;
   }
-  #nav .menu {
+  /* headerWrap : manu */
+  #nav .headerWrap .menu {
+    display: none;
     text-align: center;
     width: 100%;
     background: rgba(0, 0, 0, 0.5);
   }
-  /*   #nav .menu li {display:inline-block; width: 100%;} */
-  #nav .menu li.active {
+  #nav .headerWrap .menu li {
+    padding: 0 0 !important;
+  }
+  #nav .headerWrap .menu li.active {
     background: rgba(0, 0, 0, 0.4);
   }
-  #nav .menu li a {
+  #nav .headerWrap .menu li a {
     padding: 15px;
   }
 
@@ -448,22 +381,17 @@ small {
 }
 
 @media only screen and (max-width: 768px) {
-  /* top-logo */
-  #nav h1 {
-    left: calc(10vw - (100px / 2));
-  }
-  /* 햄메뉴 */
-  #nav .ham span {
+  /* headerWrap : ham */
+  #nav .headerWrap .ham .bar {
     width: 35px;
     height: 3px;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  
   .bio_layout {
     font-size: calc(3.5rem + 0.2vw);
-}
+  }
   .o3 {
     flex-direction: column;
   }
@@ -485,26 +413,33 @@ small {
 
   .bio_layout {
     font-size: calc(3rem + 0.2vw);
-}
+  }
 }
 
-@media only screen and (max-width: 500px) {
-  /* top-logo */
-  #nav h1 {
-    left: 6%;
+@media only screen and (max-width: 600px) {
+  /* headerWrap : logo */
+  #nav .headerWrap .logo {
+    left: 2%;
   }
-  /* 햄메뉴 */
-  #nav .ham {
+  #nav .headerWrap .logo img {
+    max-width: 80%;
+  }
+  /* headerWrap : ham */
+  #nav .headerWrap .ham {
+    top: 1rem;
     width: 36px;
     height: 34px;
   }
-  #nav .ham span {
+  #nav .headerWrap .ham .bar {
     width: 25px;
     height: 2px;
+    margin-bottom: 6px;
   }
-  .ham.active .bar3 {
+  #nav .headerWrap .ham.active .bar1 {
+    margin-bottom: -2.5px;
+  }
+  #nav .headerWrap .ham.active .bar3 {
     margin-top: -2.5px;
-    transform: rotate(135deg);
   }
 
   .bio_layout > * {
@@ -531,14 +466,22 @@ small {
     display: none;
   }
 }
+@media only screen and (max-width: 450px) {
+  /* headerWrap : logo */
+  #nav .headerWrap .logo {
+    top: 0.8rem;
+  }
+  #nav .headerWrap .logo img {
+    max-width: 60%;
+  }
+}
 
 @media only screen and (max-width: 350px) {
-
   .bio_layout {
     font-size: calc(2rem + 0.2vw);
-}
+  }
 
-.bio_box .wrapper-title{
-  font-size: clamp(4vh, 4vh, 4rem);
-}
+  .bio_box .wrapper-title {
+    font-size: clamp(4vh, 4vh, 4rem);
+  }
 }
