--- a/docs/sub.css
+++ b/docs/sub.css
@@ -79,21 +79,40 @@
 }
 /* root */
 :root {
-    --fs-xl: clamp(2.5rem, 8vw, 12.8rem);
+    /* font */
+    --fs-xl: clamp(3.2rem, 12vw, 12.8rem);
     --fs-l: clamp(0.8rem, 8vw, 4rem);
-    --fs-m: clamp(0.8rem, 4vw, 2rem);
-    --fs-s: clamp(0.8rem, 4vw, 1.25rem);
+    --fs-m: clamp(1rem, 2.5vw, 2rem);
+    --fs-s: clamp(0.8rem, 1.5vw, 1.25rem);
     --fs-300: 1rem;
     --fs-200: 0.875rem;
     --fw-light: 300;
     --fw-regular: 400;
     --f_ogg: Ogg, sans-serif;
-    --bg-1:#2196f3;
+    /* color */
+    /*--bg-1:#2196f3;*/
+    --bg-2:#4f4f4f;
+    --bg-1:#7fb9e7;
+    /*--bg-3:#d2ebff;*/
+    --bg-3:#e3f3ff;
+    --bg-b:#000000;
+    --bg-t:transparent;
+    --bg-w:#ffffff;
+    /* filter */
+    /*--ft-1:invert(55%) sepia(84%) saturate(3665%) hue-rotate(185deg) brightness(98%) contrast(94%);*/ 
+    
+    --ft-1:invert(69%) sepia(70%) saturate(447%) hue-rotate(178deg) brightness(93%) contrast(95%);
+    /* nav */
+    --t-btn: 400ms;
+    --side-offset: 32px;
+    --m-side-offset: 24px;
+    --m-bottom-offset: 16px;
 }
 
 
+
 /* Area */
-.textArea {font-size:1.05rem; line-height:2rem; text-align:justify; letter-spacing:-0.5px;}
+.textArea {font-size:1.05rem; letter-spacing:-0.025em; word-break: break-all; text-align: center;}
 
 
 .imgArea {overflow:hidden; text-align:center; margin:0; font-size:0; line-height:0;}
@@ -132,3 +151,32 @@
 .w768_show {display: none;}
 .w680_show {display: none;}
 .w425_show {display: none;}
+
+/* color */
+.dog_green{background-color:#5A8D26;}
+.dog_blue{background-color:#A5DBE5;}
+.dog_yellow{background-color:#FCC21B;}
+.dog_orange{background-color:#FFAC32;}
+
+.dp_navy{ background-color:#060A16;}
+.dp_purple{ background-color:#332387;}
+.dp_Lpurple{ background-color:#8976FF;}
+.dp_Sblue{ background-color:#A6BFFF;}
+
+
+.pl_red{ background-color:#dc3545;}
+.pl_orange{ background-color:#ffc107;}
+.pl_green{ background-color:#28a745;}
+.pl_blue{ background-color:#007bff;}
+
+
+.j_dblue{ background-color:#3d464b;}
+.j_hblue{ background-color:#12cfca;}
+.j_hgreen{ background-color:#00d255;}
+.j_Scarlet{ background-color:#fe5356;}
+
+
+.p_dblue{ background-color:#1A3598;}
+.p_blue{ background-color:#123DFC;}
+.p_skyblue{ background-color:#1697E5;}
+.p_hblue{ background-color:#6ADADB;}
