--- a/docs/css/sub.css
+++ b/docs/css/sub.css
@@ -76,7 +76,7 @@
 /* ------------ root ------------ */
 :root {
     /* font */
-    --fs-xl: clamp(3.2rem, 12vw, 12.8rem);
+    --fs-xl: clamp(3.2rem, 12vw, 18rem);
     --fs-l: clamp(2.5rem, 5vw, 7rem);
     --fs-m: clamp(1rem, 2.5vw, 2rem);
     --fs-sm: clamp(0.9rem, 2vw, 1.5rem);
@@ -95,9 +95,10 @@
     --bg-1:#7fb9e7;
     /*--bg-3:#d2ebff;*/
     --bg-3:#e3f3ff;
-    --bg-b:#000000;
-    --bg-t:transparent;
-    --bg-w:#ffffff;
+    --transparent:transparent; 
+    --white:#ffffff;
+    --black:#000000;
+    
     /* filter */
     /*--ft-1:invert(55%) sepia(84%) saturate(3665%) hue-rotate(185deg) brightness(98%) contrast(94%);*/ 
     
@@ -108,53 +109,6 @@
     --m-side-offset: 24px;
     --m-bottom-offset: 16px;
 }
-
-
-
-/* Area */
-.textArea {font-size:1.05rem; letter-spacing:-0.025em; word-break: break-all; text-align: center;}
-
-
-.imgArea {overflow:hidden; text-align:center; margin:0; font-size:0; line-height:0;}
-.imgArea > img {max-width:100%; overflow:hidden;}
-
-/* margin */
-.m_auto {margin: auto;}
-.m_10 {margin: 10px;}
-.m_20 {margin: 20px;}
-.m_30 {margin: 30px;}
-.m_40 {margin: 40px;}
-
-.mx_10 {margin: 0 10px;}
-.mx_20 {margin: 0 20px;}
-.mx_30 {margin: 0 30px;}
-.mx_40 {margin: 0 40px;}
-
-.mt_10 {margin-top: 10px;}
-.mt_20 {margin-top: 20px;}
-.mt_30 {margin-top: 30px;}
-.mt_40 {margin-top: 40px;}
-
-.mb_10 {margin-bottom: 10px;}
-.mb_20 {margin-bottom: 20px;}
-.mb_30 {margin-bottom: 30px;}
-.mb_40 {margin-bottom: 40px;}
-
-.mr_5 {margin-right: 5px;}
-.mr_10 {margin-right: 10px;}
-
-/* show */
-.w1440_hide {display: block;}
-.w1024_hide {display: block;}
-.w768_hide {display: block;}
-.w425_hide {display: block;}
-.w375_hide {display: block;}
-
-.w1024_show {display: none;}
-.w768_show {display: none;}
-.w680_show {display: none;}
-.w425_show {display: none;}
-.w375_show {display: none;}
 
 
 /* ------------ color ------------ */
@@ -185,3 +139,119 @@
 .p_blue{ background-color:#123DFC;}
 .p_skyblue{ background-color:#1697E5;}
 .p_hblue{ background-color:#6ADADB;}
+
+
+/* margin */
+.m_auto {margin: auto;}
+.m_10 {margin: 10px;}
+.m_20 {margin: 20px;}
+.m_30 {margin: 30px;}
+.m_40 {margin: 40px;}
+
+.mx_10 {margin: 0 10px;}
+.mx_20 {margin: 0 20px;}
+.mx_30 {margin: 0 30px;}
+.mx_40 {margin: 0 40px;}
+
+.mt_10 {margin-top: 10px;}
+.mt_20 {margin-top: 20px;}
+.mt_30 {margin-top: 30px;}
+.mt_40 {margin-top: 40px;}
+
+.mb_10 {margin-bottom: 10px;}
+.mb_20 {margin-bottom: 20px;}
+.mb_30 {margin-bottom: 30px;}
+.mb_40 {margin-bottom: 40px;}
+
+.mr_5 {margin-right: 5px;}
+.mr_10 {margin-right: 10px;}
+
+/* padding */
+.pt_10 {padding-top: 10px;}
+
+/* show */
+.w1440_hide {display: block;}
+.w1024_hide {display: block;}
+.w768_hide {display: block;}
+.w425_hide {display: block;}
+.w375_hide {display: block;}
+
+.w1024_show {display: none;}
+.w768_show {display: none;}
+.w680_show {display: none;}
+.w425_show {display: none;}
+.w375_show {display: none;}
+
+
+/* title&text */
+#subContent .titleArea {position:relative; display:inline-block; font-family:'Ogg'; font-size:2.8rem; text-align: center; margin-bottom: 10px;}
+#subContent .textArea {font-size:1.05rem; letter-spacing:-0.025em; word-break: break-all; text-align: center;}
+#subContent .textArea1 {font-size: 1rem; text-align: center; letter-spacing:-0.025em; margin-top: 5px;}
+#subContent .textArea2 {font-size: 2.5rem; letter-spacing:-0.025em;}
+
+#subContent .textArea_C{text-align: center;}
+#subContent .textArea_R{text-align: right;}
+#subContent .textArea_L{text-align: left;}
+
+/* img*/
+#subContent .imgArea {text-align:center; margin-bottom:25px;}
+#subContent .imgArea img {max-width:100%;}
+
+#subContent .imgAreaBetween {width:100%; display:flex; flex-flow:row; flex-wrap:wrap; justify-content:space-between; align-items:center;}
+#subContent .imgAreaBetween.ver2 > * {width:calc((100% - 10px) / 2); margin-bottom:20px; text-align: center;}
+#subContent .imgAreaBetween.ver3 > * {width:calc((100% - 20px) / 3); margin-bottom:20px;}
+#subContent .imgAreaBetween.ver4 > * {width:calc((100% - 30px) / 4); margin-bottom:20px;}
+
+#subContent .imgAreaCenter {width:100%; display:flex; flex-flow:row no-wrap; justify-content:center; align-items:flex-start;}
+#subContent .imgAreaCenter > * {margin-right: 20px;}
+#subContent .imgAreaCenter > *:last-child {margin-right: 0;}
+#subContent .imgAreaCenter > img {max-width:100%;}
+
+/* flex */
+#subContent .flexArea {width:100%; display:flex; flex-flow:row wrap; justify-content:space-between;}
+#subContent .flexArea.type2 .flexBox {width:49.5%;}
+#subContent .flexArea.type3 .flexBox {width:32.8%;}
+#subContent .flexArea.type4 .flexBox {width:24.5%;}
+#subContent .flexArea.type5 .flexBox {width:19%;}
+/* line */
+#subContent .border_y05 {border-top:1px solid rgba(255,255,255,0.5); border-bottom: 1px solid rgba(255,255,255,0.5);}
+
+
+
+
+
+/* @media */
+@media only screen and (max-width: 1920px) {
+    #subContent .textArea2 {font-size: 2rem;}
+}
+
+@media only screen and (max-width: 1440px) {
+    #subContent .textArea2 {font-size: 1.65rem;}
+}
+@media only screen and (max-width: 1024px) {
+    #subContent .textArea2 {font-size: 1.3rem;}
+}
+@media only screen and (max-width: 768px) {
+    #subContent .titleArea {font-size: 2rem;}
+    #subContent .textArea {font-size: 1rem;}
+    #subContent .textArea2 {font-size: 1.15rem;}
+}
+
+@media only screen and (max-width: 600px) {
+    #subContent .textArea1 {font-size: 0.8rem;}
+}
+
+@media only screen and (max-width: 425px) {
+    #subContent .textArea{font-size:0.85rem;}
+    #subContent .textArea2 {font-size: 1.05rem;}
+}
+
+@media only screen and (max-width: 375px) {
+    #subContent .textArea1 {font-size:0.8rem; margin-top: 3px;}
+}
+
+
+@media only screen and (max-width: 350px) {
+    #subContent .titleArea {letter-spacing: -0.08rem;}
+    #subContent .textArea2 {font-size: 0.9rem;}
+}
